welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:2: error: ')' expected but integer literal found.
	if ((13<=a && a<=19 && 13>=b && b<=19)||(13<=a && a>=19 13<=b && b<=19) {
                                                                ^loneTeen:7: error: illegal start of simple expression
}
^